<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="gcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="app_intro_done_button">DONE</string>
    <string name="app_intro_skip_button">SKIP</string>
    <string name="define_appintro" />
    
    <string name="app_id">ca-app-pub-8468661407843417~9499390859</string>
    <string name="app_name">Instagram Save</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="banner_home_footer">ca-app-pub-8468661407843417/8356208882</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="copyHashtag">Copy Hashtags</string>
    <string name="copytext">Copy Text</string>
    <string name="define_AndroidIconics">year;owner</string>
    <string name="define_fastadapter">year;owner</string>
    <string name="define_materialdrawer">year;owner</string>
    <string name="define_materialize">year;owner</string>
    <string name="developer_email">hb.technology@gmail.com</string>
    <string name="downloading">Downloading..</string>
    <string name="downloading_percent">0%</string>
    <string name="dummy_text">"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s."</string>
    <string name="interstitial_full_screen">ca-app-pub-8468661407843417/6044852263</string>
    <string name="material_drawer_close">Close</string>
    <string name="material_drawer_open">Open</string>
    <string name="native_ad">ca-app-pub-4528287893661447/4690172528</string>
    <string name="no_images_and_videos_are_downloaded">No Images and Videos are Downloaded</string>
    <string name="password_toggle_content_description">Toggle password visibility</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="privacy_message"><b>We are committed to protecting your privacy</b>" 

 We collect the minimum amount of information about you that is commensurate with providing you with a satisfactory service. This policy indicates the type of processes that may result in data being collected about you. Your use of this website gives us the right to collect that information. 

 "<b>Information Collected</b>" 

 We may collect any or all of the information that you give us depending on the type of transaction you enter into, including your name, address, telephone number, and email address, together with data about your use of the website. Other information that may be needed from time to time to process a request may also be collected as indicated on the website. 

 "<b>Information Use</b>" 

 We use the information collected primarily to process the task for which you visited the website. Data collected in the UK is held in accordance with the Data Protection Act. All reasonable precautions are taken to prevent unauthorised access to this information. This safeguard may require you to provide additional forms of identity should you wish to obtain information about your account details. 

 "<b>Cookies</b>" 

 Your Internet browser has the in-built facility for storing small files - \"cookies\" - that hold information which allows a website to recognise your account. Our website takes advantage of this facility to enhance your experience. You have the ability to prevent your computer from accepting cookies but, if you do, certain functionality on the website may be impaired. 

 "<b>Disclosing Information</b>" 

 We do not disclose any personal information obtained about you from this website to third parties unless you permit us to do so by ticking the relevant boxes in registration or competition forms. We may also use the information to keep in contact with you and inform you of developments associated with us. You will be given the opportunity to remove yourself from any mailing list or similar device. If at any time in the future we should wish to disclose information collected on this website to any third party, it would only be with your knowledge and consent. We may from time to time provide information of a general nature to third parties - for example, the number of individuals visiting our website or completing a registration form, but we will not use any information that could identify those individuals. In addition Dummy may work with third parties for the purpose of delivering targeted behavioural advertising to the Dummy website. Through the use of cookies, anonymous information about your use of our websites and other websites will be used to provide more relevant adverts about goods and services of interest to you. For more information on online behavioural advertising and about how to turn this feature off, please visit youronlinechoices.com/opt-out. 

 "<b>Changes to this Policy</b>" 

 Any changes to our Privacy Policy will be placed here and will supersede this version of our policy. We will take reasonable steps to draw your attention to any changes in our policy. However, to be on the safe side, we suggest that you read this document each time you use the website to ensure that it still meets with your approval. 

 "<b>Contacting Us</b>" 

 If you have any questions about our Privacy Policy, or if you want to know what information we have collected about you, please email us at hb.technology@gmail.com. You can also correct any factual errors in that information or require us to remove your details form any list under our control."</string>
    <string name="reposttext">Repost</string>
    <string name="sintony">sintony-regular.otf</string>
    <string name="white">White</string>
</resources>
