<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="25.0dip">

            <io.gloxey.cfv.CFTextView
                android:id="@+id/textViewDownload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/downloading"
                app:font_name="@string/sintony" />

            <io.gloxey.cfv.CFTextView
                android:id="@+id/downloadPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/downloading_percent"
                app:font_name="@string/sintony" />

            <ProgressBar
                android:id="@+id/progress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewDownload"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:max="100" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>